Add many papers related to random walks.

--- a/All.bib
+++ b/All.bib
@@ -320,6 +320,23 @@
   mrreviewer	= {Nizar Demni}
 }
 
+@Article{	  adler:77:hausdorff,
+  author	= {Adler, Robert J.},
+  title		= {Hausdorff dimension and {G}aussian fields},
+  journal	= {Ann. Probability},
+  fjournal	= {The Annals of Probability},
+  volume	= {5},
+  year		= {1977},
+  number	= {1},
+  pages		= {145--151},
+  issn		= {0091-1798},
+  mrclass	= {60G17},
+  mrnumber	= {426123},
+  mrreviewer	= {Simeon M. Berman},
+  doi		= {10.1214/aop/1176995900},
+  url		= {https://doi.org/10.1214/aop/1176995900}
+}
+
 @Article{	  adolfsson.jerison:94:lp-integrability,
   author	= {Adolfsson, Vilhelm and Jerison, David},
   title		= {{$L^p$}-integrability of the second order derivatives for
@@ -2890,24 +2907,6 @@
 
 @Article{	  balan.tudor:10:stochastic,
   author	= {Balan, Raluca M. and Tudor, Ciprian A.},
-  title		= {The stochastic wave equation with fractional noise: a
-		  random field approach},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {120},
-  year		= {2010},
-  number	= {12},
-  pages		= {2468--2494},
-  issn		= {0304-4149},
-  mrclass	= {60H15 (60G60 60H05)},
-  mrnumber	= {2728174},
-  mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
-  doi		= {10.1016/j.spa.2010.08.006},
-  url		= {https://doi.org/10.1016/j.spa.2010.08.006}
-}
-
-@Article{	  balan.tudor:10:stochastic*1,
-  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
   title		= {Stochastic heat equation with multiplicative
 		  fractional-colored noise},
   journal	= {J. Theoret. Probab.},
@@ -2922,6 +2921,24 @@
   mrreviewer	= {David Nualart},
   doi		= {10.1007/s10959-009-0237-3},
   url		= {https://doi.org/10.1007/s10959-009-0237-3}
+}
+
+@Article{	  balan.tudor:10:stochastic*1,
+  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
+  title		= {The stochastic wave equation with fractional noise: a
+		  random field approach},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {120},
+  year		= {2010},
+  number	= {12},
+  pages		= {2468--2494},
+  issn		= {0304-4149},
+  mrclass	= {60H15 (60G60 60H05)},
+  mrnumber	= {2728174},
+  mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
+  doi		= {10.1016/j.spa.2010.08.006},
+  url		= {https://doi.org/10.1016/j.spa.2010.08.006}
 }
 
 @Article{	  balan.zamfirescu:06:strong,
@@ -8890,6 +8907,23 @@
 
 @Article{	  cerrai.debussche:19:large,
   author	= {Cerrai, Sandra and Debussche, Arnaud},
+  title		= {Large deviations for the dynamic {$\Phi^{2n}_d$} model},
+  journal	= {Appl. Math. Optim.},
+  fjournal	= {Applied Mathematics and Optimization},
+  volume	= {80},
+  year		= {2019},
+  number	= {1},
+  pages		= {81--102},
+  issn		= {0095-4616},
+  mrclass	= {35R60 (35B25 35K57)},
+  mrnumber	= {3978511},
+  mrreviewer	= {Jamil Abreu},
+  doi		= {10.1007/s00245-017-9459-4},
+  url		= {https://doi.org/10.1007/s00245-017-9459-4}
+}
+
+@Article{	  cerrai.debussche:19:large*1,
+  author	= {Cerrai, Sandra and Debussche, Arnaud},
   title		= {Large deviations for the two-dimensional stochastic
 		  {N}avier-{S}tokes equation with vanishing noise
 		  correlation},
@@ -8906,23 +8940,6 @@
   mrreviewer	= {Thomas Kelly Alberts},
   doi		= {10.1214/17-aihp881},
   url		= {https://doi.org/10.1214/17-aihp881}
-}
-
-@Article{	  cerrai.debussche:19:large*1,
-  author	= {Cerrai, Sandra and Debussche, Arnaud},
-  title		= {Large deviations for the dynamic {$\Phi^{2n}_d$} model},
-  journal	= {Appl. Math. Optim.},
-  fjournal	= {Applied Mathematics and Optimization},
-  volume	= {80},
-  year		= {2019},
-  number	= {1},
-  pages		= {81--102},
-  issn		= {0095-4616},
-  mrclass	= {35R60 (35B25 35K57)},
-  mrnumber	= {3978511},
-  mrreviewer	= {Jamil Abreu},
-  doi		= {10.1007/s00245-017-9459-4},
-  url		= {https://doi.org/10.1007/s00245-017-9459-4}
 }
 
 @Article{	  cerrai.freidlin.ea:17:on,
@@ -10045,6 +10062,24 @@
 
 @Article{	  chen.dalang:15:moments,
   author	= {Chen, Le and Dalang, Robert C.},
+  title		= {Moments and growth indices for the nonlinear stochastic
+		  heat equation with rough initial conditions},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {43},
+  year		= {2015},
+  number	= {6},
+  pages		= {3006--3051},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60 60G60)},
+  mrnumber	= {3433576},
+  mrreviewer	= {Mathew Joseph},
+  doi		= {10.1214/14-AOP954},
+  url		= {https://doi.org/10.1214/14-AOP954}
+}
+
+@Article{	  chen.dalang:15:moments*1,
+  author	= {Chen, Le and Dalang, Robert C.},
   title		= {Moments, intermittency and growth indices for the
 		  nonlinear fractional stochastic heat equation},
   journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
@@ -10060,24 +10095,6 @@
   mrreviewer	= {Jan I. Seidler},
   doi		= {10.1007/s40072-015-0054-x},
   url		= {https://doi.org/10.1007/s40072-015-0054-x}
-}
-
-@Article{	  chen.dalang:15:moments*1,
-  author	= {Chen, Le and Dalang, Robert C.},
-  title		= {Moments and growth indices for the nonlinear stochastic
-		  heat equation with rough initial conditions},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {43},
-  year		= {2015},
-  number	= {6},
-  pages		= {3006--3051},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35R60 60G60)},
-  mrnumber	= {3433576},
-  mrreviewer	= {Mathew Joseph},
-  doi		= {10.1214/14-AOP954},
-  url		= {https://doi.org/10.1214/14-AOP954}
 }
 
 @Article{	  chen.deya.ea:21:k-rough,
@@ -12472,6 +12489,24 @@
 }
 
 @Article{	  conus.joseph.ea:13:on,
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
+  title		= {On the chaotic character of the stochastic heat equation,
+		  before the onset of intermitttency},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {41},
+  year		= {2013},
+  number	= {3B},
+  pages		= {2225--2260},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {3098071},
+  mrreviewer	= {Sergey V. Lototsky},
+  doi		= {10.1214/11-AOP717},
+  url		= {https://doi.org/10.1214/11-AOP717}
+}
+
+@Article{	  conus.joseph.ea:13:on*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {On the chaotic character of the stochastic heat equation,
@@ -12488,24 +12523,6 @@
   mrreviewer	= {Sergey V. Lototsky},
   doi		= {10.1007/s00440-012-0434-3},
   url		= {https://doi.org/10.1007/s00440-012-0434-3}
-}
-
-@Article{	  conus.joseph.ea:13:on*1,
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
-  title		= {On the chaotic character of the stochastic heat equation,
-		  before the onset of intermitttency},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {41},
-  year		= {2013},
-  number	= {3B},
-  pages		= {2225--2260},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35R60)},
-  mrnumber	= {3098071},
-  mrreviewer	= {Sergey V. Lototsky},
-  doi		= {10.1214/11-AOP717},
-  url		= {https://doi.org/10.1214/11-AOP717}
 }
 
 @Article{	  conus.joseph.ea:14:initial,
@@ -12839,23 +12856,6 @@
 }
 
 @Article{	  corwin.ghosal.ea:20:stochastic,
-  author	= {Corwin, Ivan and Ghosal, Promit and Shen, Hao and Tsai,
-		  Li-Cheng},
-  title		= {Stochastic {PDE} limit of the six vertex model},
-  journal	= {Comm. Math. Phys.},
-  fjournal	= {Communications in Mathematical Physics},
-  volume	= {375},
-  year		= {2020},
-  number	= {3},
-  pages		= {1945--2038},
-  issn		= {0010-3616},
-  mrclass	= {60K35 (35R60 60H15 82C22)},
-  mrnumber	= {4091508},
-  doi		= {10.1007/s00220-019-03678-z},
-  url		= {https://doi.org/10.1007/s00220-019-03678-z}
-}
-
-@Article{	  corwin.ghosal.ea:20:stochastic*1,
   author	= {Corwin, Ivan and Ghosal, Promit and Matetski, Konstantin},
   title		= {Stochastic {PDE} limit of the dynamic {ASEP}},
   journal	= {Comm. Math. Phys.},
@@ -12870,6 +12870,23 @@
   mrreviewer	= {Ya. \={I}. B\={i}lopol\cprime s\cprime ka},
   doi		= {10.1007/s00220-020-03905-y},
   url		= {https://doi.org/10.1007/s00220-020-03905-y}
+}
+
+@Article{	  corwin.ghosal.ea:20:stochastic*1,
+  author	= {Corwin, Ivan and Ghosal, Promit and Shen, Hao and Tsai,
+		  Li-Cheng},
+  title		= {Stochastic {PDE} limit of the six vertex model},
+  journal	= {Comm. Math. Phys.},
+  fjournal	= {Communications in Mathematical Physics},
+  volume	= {375},
+  year		= {2020},
+  number	= {3},
+  pages		= {1945--2038},
+  issn		= {0010-3616},
+  mrclass	= {60K35 (35R60 60H15 82C22)},
+  mrnumber	= {4091508},
+  doi		= {10.1007/s00220-019-03678-z},
+  url		= {https://doi.org/10.1007/s00220-019-03678-z}
 }
 
 @Article{	  corwin.ghosal.ea:21:kpz,
@@ -15229,24 +15246,6 @@
 
 @Article{	  dalang:88:on,
   author	= {Dalang, Robert C.},
-  title		= {On infinite perfect graphs and randomized stopping points
-		  on the plane},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {78},
-  year		= {1988},
-  number	= {3},
-  pages		= {357--378},
-  issn		= {0178-8051},
-  mrclass	= {60G40 (05C99)},
-  mrnumber	= {949178},
-  mrreviewer	= {U. Krengel},
-  doi		= {10.1007/BF00334200},
-  url		= {https://doi.org/10.1007/BF00334200}
-}
-
-@Article{	  dalang:88:on*1,
-  author	= {Dalang, Robert C.},
   title		= {On stopping points in the plane that lie on a unique
 		  optional increasing path},
   journal	= {Stochastics},
@@ -15261,6 +15260,24 @@
   mrreviewer	= {Nicholas Frangos},
   doi		= {10.1080/17442508808833517},
   url		= {https://doi.org/10.1080/17442508808833517}
+}
+
+@Article{	  dalang:88:on*1,
+  author	= {Dalang, Robert C.},
+  title		= {On infinite perfect graphs and randomized stopping points
+		  on the plane},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {78},
+  year		= {1988},
+  number	= {3},
+  pages		= {357--378},
+  issn		= {0178-8051},
+  mrclass	= {60G40 (05C99)},
+  mrnumber	= {949178},
+  mrreviewer	= {U. Krengel},
+  doi		= {10.1007/BF00334200},
+  url		= {https://doi.org/10.1007/BF00334200}
 }
 
 @Article{	  dalang:89:optimal,
@@ -15568,23 +15585,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -15600,6 +15600,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -15752,6 +15769,25 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -15766,25 +15802,6 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.feng:01:large,
@@ -17584,21 +17601,6 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -17611,6 +17613,21 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -18947,20 +18964,6 @@
 @Book{		  erdelyi.magnus.ea:81:higher,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {III}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1955
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xvii+292},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698781}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*1,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -18971,6 +18974,20 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698779}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*1,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {III}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1955
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xvii+292},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698781}
 }
 
 @Book{		  erdelyi.magnus.ea:81:higher*2,
@@ -23109,6 +23126,24 @@
   url		= {https://doi.org/10.1214/009117906000001060}
 }
 
+@Article{	  greven.hollander:92:branching,
+  author	= {Greven, Andreas and den Hollander, Frank},
+  title		= {Branching random walk in random environment: phase
+		  transitions for local and global growth rates},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {91},
+  year		= {1992},
+  number	= {2},
+  pages		= {195--249},
+  issn		= {0178-8051},
+  mrclass	= {60K35 (60J80 82C44)},
+  mrnumber	= {1147615},
+  mrreviewer	= {Klaus Fleischmann},
+  doi		= {10.1007/BF01291424},
+  url		= {https://doi.org/10.1007/BF01291424}
+}
+
 @Article{	  greven.hollander:93:variational,
   author	= {Greven, Andreas and den Hollander, Frank},
   title		= {A variational characterization of the speed of a
@@ -23124,6 +23159,22 @@
   mrnumber	= {1241035},
   mrreviewer	= {Bernard Ycart},
   url		= {http://links.jstor.org/sici?sici=1050-5164(199311)3:4<1067:AVCOTS>2.0.CO;2-Q&origin=MSN}
+}
+
+@Article{	  greven.hollander:94:large,
+  author	= {Greven, Andreas and den Hollander, Frank},
+  title		= {Large deviations for a random walk in random environment},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {22},
+  year		= {1994},
+  number	= {3},
+  pages		= {1381--1428},
+  issn		= {0091-1798},
+  mrclass	= {60J15 (60F10 60K35 82C44)},
+  mrnumber	= {1303649},
+  mrreviewer	= {Thomas Polaski},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(199407)22:3<1381:LDFARW>2.0.CO;2-P&origin=MSN}
 }
 
 @Article{	  grigorescu.kang.ea:04:behavior,
@@ -24323,7 +24374,20 @@
   url		= {https://doi.org/10.1088/0951-7715/23/4/008}
 }
 
-@Article{	  hairer.manson:10:periodic,
+@InCollection{	  hairer.manson:10:periodic,
+  author	= {Hairer, Martin and Manson, Charles},
+  title		= {Periodic homogenization with an interface},
+  booktitle	= {Progress in analysis and its applications},
+  pages		= {410--416},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2010},
+  mrclass	= {60J60 (60F05)},
+  mrnumber	= {2766949},
+  doi		= {10.1142/9789814313179\_0053},
+  url		= {https://doi.org/10.1142/9789814313179_0053}
+}
+
+@Article{	  hairer.manson:10:periodic*1,
   author	= {Hairer, Martin and Manson, Charles},
   title		= {Periodic homogenization with an interface: the
 		  one-dimensional case},
@@ -24339,19 +24403,6 @@
   mrreviewer	= {Nicolas Saintier},
   doi		= {10.1016/j.spa.2010.03.016},
   url		= {https://doi.org/10.1016/j.spa.2010.03.016}
-}
-
-@InCollection{	  hairer.manson:10:periodic*1,
-  author	= {Hairer, Martin and Manson, Charles},
-  title		= {Periodic homogenization with an interface},
-  booktitle	= {Progress in analysis and its applications},
-  pages		= {410--416},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2010},
-  mrclass	= {60J60 (60F05)},
-  mrnumber	= {2766949},
-  doi		= {10.1142/9789814313179\_0053},
-  url		= {https://doi.org/10.1142/9789814313179_0053}
 }
 
 @Article{	  hairer.manson:11:periodic,
@@ -25182,6 +25233,18 @@
   author	= {Hairer, Martin},
   title		= {Singular stochastic {PDE}s},
   booktitle	= {Proceedings of the {I}nternational {C}ongress of
+		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
+  pages		= {49--73},
+  publisher	= {Kyung Moon Sa, Seoul},
+  year		= {2014},
+  mrclass	= {60H15 (81S20 82C28)},
+  mrnumber	= {3727602}
+}
+
+@InProceedings{	  hairer:14:singular*1,
+  author	= {Hairer, Martin},
+  title		= {Singular stochastic {PDE}s},
+  booktitle	= {Proceedings of the {I}nternational {C}ongress of
 		  {M}athematicians---{S}eoul 2014. {V}ol. 1},
   pages		= {685--709},
   publisher	= {Kyung Moon Sa, Seoul},
@@ -25189,18 +25252,6 @@
   mrclass	= {60H15 (81S20 82C28)},
   mrnumber	= {3728488},
   mrreviewer	= {Peter Karl Friz}
-}
-
-@InProceedings{	  hairer:14:singular*1,
-  author	= {Hairer, Martin},
-  title		= {Singular stochastic {PDE}s},
-  booktitle	= {Proceedings of the {I}nternational {C}ongress of
-		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
-  pages		= {49--73},
-  publisher	= {Kyung Moon Sa, Seoul},
-  year		= {2014},
-  mrclass	= {60H15 (81S20 82C28)},
-  mrnumber	= {3727602}
 }
 
 @InCollection{	  hairer:14:solving,
@@ -25440,6 +25491,63 @@
   mrclass	= {62M30},
   mrnumber	= {1294070},
   url		= {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
+}
+
+@Article{	  hara.slade:00:scaling,
+  author	= {Hara, Takashi and Slade, Gordon},
+  title		= {The scaling limit of the incipient infinite cluster in
+		  high-dimensional percolation. {I}. {C}ritical exponents},
+  journal	= {J. Statist. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {99},
+  year		= {2000},
+  number	= {5-6},
+  pages		= {1075--1168},
+  issn		= {0022-4715},
+  mrclass	= {82B43 (60K35)},
+  mrnumber	= {1773141},
+  mrreviewer	= {Remco van der Hofstad},
+  doi		= {10.1023/A:1018628503898},
+  url		= {https://doi.org/10.1023/A:1018628503898}
+}
+
+@InCollection{	  hara.slade:00:scaling*1,
+  author	= {Hara, Takashi and Slade, Gordon},
+  title		= {The scaling limit of the incipient infinite cluster in
+		  high-dimensional percolation. {II}. {I}ntegrated
+		  super-{B}rownian excursion},
+  note		= {Probabilistic techniques in equilibrium and nonequilibrium
+		  statistical physics},
+  journal	= {J. Math. Phys.},
+  fjournal	= {Journal of Mathematical Physics},
+  volume	= {41},
+  year		= {2000},
+  number	= {3},
+  pages		= {1244--1293},
+  issn		= {0022-2488},
+  mrclass	= {82B43 (60K35)},
+  mrnumber	= {1757958},
+  mrreviewer	= {Remco van der Hofstad},
+  doi		= {10.1063/1.533186},
+  url		= {https://doi.org/10.1063/1.533186}
+}
+
+@Article{	  hara.slade:91:critical,
+  author	= {Hara, Takashi and Slade, Gordon},
+  title		= {Critical behaviour of self-avoiding walk in five or more
+		  dimensions},
+  journal	= {Bull. Amer. Math. Soc. (N.S.)},
+  fjournal	= {American Mathematical Society. Bulletin. New Series},
+  volume	= {25},
+  year		= {1991},
+  number	= {2},
+  pages		= {417--423},
+  issn		= {0273-0979},
+  mrclass	= {82B41 (60K35 82B27)},
+  mrnumber	= {1093059},
+  mrreviewer	= {Cheng Xun Wu},
+  doi		= {10.1090/S0273-0979-1991-16085-4},
+  url		= {https://doi.org/10.1090/S0273-0979-1991-16085-4}
 }
 
 @Article{	  harang.tindel:21:volterra,
@@ -29184,21 +29292,6 @@
 
 @InCollection{	  its.tracy.ea:01:random,
   author	= {Its, Alexander R. and Tracy, Craig A. and Widom, Harold},
-  title		= {Random words, {T}oeplitz determinants, and integrable
-		  systems. {I}},
-  booktitle	= {Random matrix models and their applications},
-  series	= {Math. Sci. Res. Inst. Publ.},
-  volume	= {40},
-  pages		= {245--258},
-  publisher	= {Cambridge Univ. Press, Cambridge},
-  year		= {2001},
-  mrclass	= {82B41 (05A99 37B99 37K10 47B35 60C05)},
-  mrnumber	= {1842789},
-  mrreviewer	= {Estelle L. Basor}
-}
-
-@InCollection{	  its.tracy.ea:01:random*1,
-  author	= {Its, Alexander R. and Tracy, Craig A. and Widom, Harold},
   title		= {Random words, {T}oeplitz determinants and integrable
 		  systems. {II}},
   note		= {Advances in nonlinear mathematics and science},
@@ -29213,6 +29306,21 @@
   mrreviewer	= {Martin V. Hildebrand},
   doi		= {10.1016/S0167-2789(01)00171-3},
   url		= {https://doi.org/10.1016/S0167-2789(01)00171-3}
+}
+
+@InCollection{	  its.tracy.ea:01:random*1,
+  author	= {Its, Alexander R. and Tracy, Craig A. and Widom, Harold},
+  title		= {Random words, {T}oeplitz determinants, and integrable
+		  systems. {I}},
+  booktitle	= {Random matrix models and their applications},
+  series	= {Math. Sci. Res. Inst. Publ.},
+  volume	= {40},
+  pages		= {245--258},
+  publisher	= {Cambridge Univ. Press, Cambridge},
+  year		= {2001},
+  mrclass	= {82B41 (05A99 37B99 37K10 47B35 60C05)},
+  mrnumber	= {1842789},
+  mrreviewer	= {Estelle L. Basor}
 }
 
 @InCollection{	  its:11:painleve,
@@ -32106,6 +32214,19 @@
   url		= {https://doi.org/10.1214/19-AIHP986}
 }
 
+@Book{		  knight:81:essentials,
+  author	= {Knight, Frank B.},
+  title		= {Essentials of {B}rownian motion and diffusion},
+  series	= {Mathematical Surveys, No. 18},
+  publisher	= {American Mathematical Society, Providence, R.I.},
+  year		= {1981},
+  pages		= {xiii+201},
+  isbn		= {0-8218-1518-0},
+  mrclass	= {60J65 (60J60)},
+  mrnumber	= {613983},
+  mrreviewer	= {D. Kannan}
+}
+
 @Article{	  knizhnik.polyakov.ea:88:fractal,
   author	= {Knizhnik, V. G. and Polyakov, A. M. and Zamolodchikov, A.
 		  B.},
@@ -34950,24 +35071,6 @@
 
 @Article{	  malliavin.nualart:93:quasi-sure,
   author	= {Malliavin, Paul and Nualart, David},
-  title		= {Quasi-sure analysis and {S}tratonovich anticipative
-		  stochastic differential equations},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {96},
-  year		= {1993},
-  number	= {1},
-  pages		= {45--55},
-  issn		= {0178-8051},
-  mrclass	= {60H10 (60H07)},
-  mrnumber	= {1222364},
-  mrreviewer	= {Daniel Ocone},
-  doi		= {10.1007/BF01195882},
-  url		= {https://doi.org/10.1007/BF01195882}
-}
-
-@Article{	  malliavin.nualart:93:quasi-sure*1,
-  author	= {Malliavin, Paul and Nualart, David},
   title		= {Quasi-sure analysis of stochastic flows and {B}anach space
 		  valued smooth functionals on the {W}iener space},
   journal	= {J. Funct. Anal.},
@@ -34982,6 +35085,24 @@
   mrreviewer	= {Vladimir I. Bogachev},
   doi		= {10.1006/jfan.1993.1034},
   url		= {https://doi.org/10.1006/jfan.1993.1034}
+}
+
+@Article{	  malliavin.nualart:93:quasi-sure*1,
+  author	= {Malliavin, Paul and Nualart, David},
+  title		= {Quasi-sure analysis and {S}tratonovich anticipative
+		  stochastic differential equations},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {96},
+  year		= {1993},
+  number	= {1},
+  pages		= {45--55},
+  issn		= {0178-8051},
+  mrclass	= {60H10 (60H07)},
+  mrnumber	= {1222364},
+  mrreviewer	= {Daniel Ocone},
+  doi		= {10.1007/BF01195882},
+  url		= {https://doi.org/10.1007/BF01195882}
 }
 
 @Book{		  malliavin.thalmaier:06:stochastic,
@@ -39004,25 +39125,7 @@
   url		= {https://doi.org/10.1016/j.jmaa.2019.123737}
 }
 
-@Article{	  nane:06:iterated,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion in bounded domains in
-		  {$\mathbb{R}^n$}},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {116},
-  year		= {2006},
-  number	= {6},
-  pages		= {905--916},
-  issn		= {0304-4149},
-  mrclass	= {60J65},
-  mrnumber	= {2254664},
-  mrreviewer	= {Endre Cs\'{a}ki},
-  doi		= {10.1016/j.spa.2005.10.007},
-  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
-}
-
-@Book{		  nane:06:iterated*1,
+@Book{		  nane:06:iterated,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
 		  isoperimetric-type inequalities},
@@ -39036,7 +39139,7 @@
   url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
 }
 
-@Article{	  nane:06:iterated*2,
+@Article{	  nane:06:iterated*1,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
@@ -39053,6 +39156,24 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
+}
+
+@Article{	  nane:06:iterated*2,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion in bounded domains in
+		  {$\mathbb{R}^n$}},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {116},
+  year		= {2006},
+  number	= {6},
+  pages		= {905--916},
+  issn		= {0304-4149},
+  mrclass	= {60J65},
+  mrnumber	= {2254664},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1016/j.spa.2005.10.007},
+  url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
 @Article{	  nane:06:laws,
@@ -41617,25 +41738,7 @@
   url		= {https://doi.org/10.1080/17442508808833542}
 }
 
-@Article{	  nualart.ustunel.ea:90:some,
-  author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
-  title		= {Some relations among classes of {$\sigma$}-fields on
-		  {W}iener space},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {85},
-  year		= {1990},
-  number	= {1},
-  pages		= {119--129},
-  issn		= {0178-8051},
-  mrclass	= {60H05 (28C20 46G12 60H07)},
-  mrnumber	= {1044304},
-  mrreviewer	= {Ana Bela Cruzeiro},
-  doi		= {10.1007/BF01377633},
-  url		= {https://doi.org/10.1007/BF01377633}
-}
-
-@InCollection{	  nualart.ustunel.ea:90:some*1,
+@InCollection{	  nualart.ustunel.ea:90:some,
   author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
   title		= {Some remarks on independence and conditioning on {W}iener
 		  space},
@@ -41651,6 +41754,24 @@
   mrreviewer	= {Denis R. Bell},
   doi		= {10.1007/BFb0083612},
   url		= {https://doi.org/10.1007/BFb0083612}
+}
+
+@Article{	  nualart.ustunel.ea:90:some*1,
+  author	= {Nualart, D. and \"{U}st\"{u}nel, A. S. and Zakai, M.},
+  title		= {Some relations among classes of {$\sigma$}-fields on
+		  {W}iener space},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {85},
+  year		= {1990},
+  number	= {1},
+  pages		= {119--129},
+  issn		= {0178-8051},
+  mrclass	= {60H05 (28C20 46G12 60H07)},
+  mrnumber	= {1044304},
+  mrreviewer	= {Ana Bela Cruzeiro},
+  doi		= {10.1007/BF01377633},
+  url		= {https://doi.org/10.1007/BF01377633}
 }
 
 @Article{	  nualart.ustunel:89:extension,
@@ -42537,19 +42658,6 @@
 
 @InProceedings{	  nualart:77:on,
   author	= {Nualart, David},
-  title		= {On the convergence of martingales},
-  booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
-		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
-  pages		= {638--646},
-  publisher	= {Consejo Sup. Inv. Cient., Madrid},
-  year		= {1977},
-  mrclass	= {60G42},
-  mrnumber	= {581115},
-  mrreviewer	= {Dominique L\'{e}pingle}
-}
-
-@InProceedings{	  nualart:77:on*1,
-  author	= {Nualart, David},
   title		= {On the order convergence of stochastic processes},
   booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
 		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
@@ -42559,6 +42667,19 @@
   mrclass	= {60G17 (60G07)},
   mrnumber	= {581116},
   mrreviewer	= {Evarist Gin\'{e}}
+}
+
+@InProceedings{	  nualart:77:on*1,
+  author	= {Nualart, David},
+  title		= {On the convergence of martingales},
+  booktitle	= {Proceedings of the {F}irst {S}panish-{P}ortuguese
+		  {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
+  pages		= {638--646},
+  publisher	= {Consejo Sup. Inv. Cient., Madrid},
+  year		= {1977},
+  mrclass	= {60G42},
+  mrnumber	= {581115},
+  mrreviewer	= {Dominique L\'{e}pingle}
 }
 
 @InCollection{	  nualart:79:decomposition,
@@ -46359,22 +46480,6 @@
 
 @Article{	  rovira.tindel:00:sharp,
   author	= {Rovira, Carles and Tindel, Samy},
-  title		= {Sharp {L}aplace asymptotics for a parabolic {SPDE}},
-  journal	= {Stochastics Stochastics Rep.},
-  fjournal	= {Stochastics and Stochastics Reports},
-  volume	= {69},
-  year		= {2000},
-  number	= {1-2},
-  pages		= {11--30},
-  issn		= {1045-1129},
-  mrclass	= {60F10 (60H15)},
-  mrnumber	= {1751716},
-  doi		= {10.1080/17442500008834230},
-  url		= {https://doi.org/10.1080/17442500008834230}
-}
-
-@Article{	  rovira.tindel:00:sharp*1,
-  author	= {Rovira, Carles and Tindel, Samy},
   title		= {Sharp large deviation estimates for a certain class of
 		  sets on the {W}iener space},
   journal	= {Bull. Sci. Math.},
@@ -46389,6 +46494,22 @@
   mrreviewer	= {Ali S\"{u}leyman \"{U}st\"{u}nel},
   doi		= {10.1016/S0007-4497(00)01062-9},
   url		= {https://doi.org/10.1016/S0007-4497(00)01062-9}
+}
+
+@Article{	  rovira.tindel:00:sharp*1,
+  author	= {Rovira, Carles and Tindel, Samy},
+  title		= {Sharp {L}aplace asymptotics for a parabolic {SPDE}},
+  journal	= {Stochastics Stochastics Rep.},
+  fjournal	= {Stochastics and Stochastics Reports},
+  volume	= {69},
+  year		= {2000},
+  number	= {1-2},
+  pages		= {11--30},
+  issn		= {1045-1129},
+  mrclass	= {60F10 (60H15)},
+  mrnumber	= {1751716},
+  doi		= {10.1080/17442500008834230},
+  url		= {https://doi.org/10.1080/17442500008834230}
 }
 
 @InCollection{	  rovira.tindel:01:sharp,
@@ -50467,24 +50588,6 @@
 
 @Article{	  tracy.widom:13:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the diagonal susceptibility of the two-dimensional
-		  {I}sing model},
-  journal	= {J. Math. Phys.},
-  fjournal	= {Journal of Mathematical Physics},
-  volume	= {54},
-  year		= {2013},
-  number	= {12},
-  pages		= {123302, 9},
-  issn		= {0022-2488},
-  mrclass	= {81V35 (81R12)},
-  mrnumber	= {3156118},
-  mrreviewer	= {Anja Vo\ss -B\"{o}hme},
-  doi		= {10.1063/1.4836779},
-  url		= {https://doi.org/10.1063/1.4836779}
-}
-
-@Article{	  tracy.widom:13:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the asymmetric simple exclusion process with multiple
 		  species},
   journal	= {J. Stat. Phys.},
@@ -50499,6 +50602,24 @@
   mrreviewer	= {Anja Vo\ss -B\"{o}hme},
   doi		= {10.1007/s10955-012-0531-9},
   url		= {https://doi.org/10.1007/s10955-012-0531-9}
+}
+
+@Article{	  tracy.widom:13:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the diagonal susceptibility of the two-dimensional
+		  {I}sing model},
+  journal	= {J. Math. Phys.},
+  fjournal	= {Journal of Mathematical Physics},
+  volume	= {54},
+  year		= {2013},
+  number	= {12},
+  pages		= {123302, 9},
+  issn		= {0022-2488},
+  mrclass	= {81V35 (81R12)},
+  mrnumber	= {3156118},
+  mrreviewer	= {Anja Vo\ss -B\"{o}hme},
+  doi		= {10.1063/1.4836779},
+  url		= {https://doi.org/10.1063/1.4836779}
 }
 
 @Article{	  tracy.widom:14:on,
@@ -50961,6 +51082,21 @@
 
 @Article{	  tracy:88:universality,
   author	= {Tracy, Craig A.},
+  title		= {Universality classes of some aperiodic {I}sing models},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and General},
+  volume	= {21},
+  year		= {1988},
+  number	= {11},
+  pages		= {L603--L605},
+  issn		= {0305-4470},
+  mrclass	= {82A68 (82-04 82A25)},
+  mrnumber	= {953188},
+  url		= {http://stacks.iop.org/0305-4470/21/L603}
+}
+
+@Article{	  tracy:88:universality*1,
+  author	= {Tracy, Craig A.},
   title		= {Universality class of a {F}ibonacci {I}sing model},
   journal	= {J. Statist. Phys.},
   fjournal	= {Journal of Statistical Physics},
@@ -50974,21 +51110,6 @@
   mrreviewer	= {Peter J. Forrester},
   doi		= {10.1007/BF01028467},
   url		= {https://doi.org/10.1007/BF01028467}
-}
-
-@Article{	  tracy:88:universality*1,
-  author	= {Tracy, Craig A.},
-  title		= {Universality classes of some aperiodic {I}sing models},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and General},
-  volume	= {21},
-  year		= {1988},
-  number	= {11},
-  pages		= {L603--L605},
-  issn		= {0305-4470},
-  mrclass	= {82A68 (82-04 82A25)},
-  mrnumber	= {953188},
-  url		= {http://stacks.iop.org/0305-4470/21/L603}
 }
 
 @InCollection{	  tracy:89:introduction,
@@ -52754,6 +52875,23 @@
   url		= {https://doi.org/10.1016/j.cnsns.2021.105895}
 }
 
+@Article{	  yoder:75:hausdorff,
+  author	= {Yoder, Lane},
+  title		= {The {H}ausdorff dimensions of the graph and range of
+		  {$N$}-parameter {B}rownian motion in {$d$}-space},
+  journal	= {Ann. Probability},
+  fjournal	= {The Annals of Probability},
+  volume	= {3},
+  year		= {1975},
+  pages		= {169--171},
+  issn		= {0091-1798},
+  mrclass	= {60J65 (60G17)},
+  mrnumber	= {359033},
+  mrreviewer	= {S. J. Taylor},
+  doi		= {10.1214/aop/1176996458},
+  url		= {https://doi.org/10.1214/aop/1176996458}
+}
+
 @Article{	  yor:80:loi,
   author	= {Yor, Marc},
   title		= {Loi de l'indice du lacet brownien, et distribution de
@@ -53171,21 +53309,7 @@
   url		= {https://doi.org/10.1007/BFb0002685}
 }
 
-@InProceedings{	  zabczyk:89:some,
-  author	= {Zabczyk, Jerzy},
-  title		= {Some interplays between control theory and stochastic
-		  systems},
-  booktitle	= {Proceedings of the 28th {IEEE} {C}onference on {D}ecision
-		  and {C}ontrol, {V}ol. 1--3 ({T}ampa, {FL}, 1989)},
-  pages		= {229--231},
-  publisher	= {IEEE, New York},
-  year		= {1989},
-  mrclass	= {93E03 (93C25)},
-  mrnumber	= {1038935},
-  mrreviewer	= {Akira Ichikawa}
-}
-
-@Article{	  zabczyk:89:some*1,
+@Article{	  zabczyk:89:some,
   author	= {Zabczyk, J.},
   title		= {Some comments on stabilizability},
   journal	= {Appl. Math. Optim.},
@@ -53200,6 +53324,20 @@
   mrreviewer	= {Enrique Zuazua},
   doi		= {10.1007/BF01448189},
   url		= {https://doi.org/10.1007/BF01448189}
+}
+
+@InProceedings{	  zabczyk:89:some*1,
+  author	= {Zabczyk, Jerzy},
+  title		= {Some interplays between control theory and stochastic
+		  systems},
+  booktitle	= {Proceedings of the 28th {IEEE} {C}onference on {D}ecision
+		  and {C}ontrol, {V}ol. 1--3 ({T}ampa, {FL}, 1989)},
+  pages		= {229--231},
+  publisher	= {IEEE, New York},
+  year		= {1989},
+  mrclass	= {93E03 (93C25)},
+  mrnumber	= {1038935},
+  mrreviewer	= {Akira Ichikawa}
 }
 
 @InCollection{	  zabczyk:89:symmetric,
